add axios and es promises

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "John Joseph",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "request": "^2.86.0",
     "yargs": "^11.0.0"
